Fixed contrast and alignment issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -37,7 +37,7 @@ nav a{
 }
 
 nav.open a{
-    color:black;
+    color:white;
     display: block;
     text-align:center;
     padding: .5rem;
