--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -51,6 +51,10 @@
         display:grid;
         grid-template: 1fr 1fr/ 1fr 1fr;
     }
+    
+    footer ul {
+        grid-column: 1/3;
+    }
 
     #menu {
         display:none;
